@@ -2,6 +2,7 @@
 	- Add ms_nstime2timestr_n() with string size limit, deprecate ms_nstime2timestr().
 	- With ms_nstime2timestr_n() print "ERROR" for NSTERROR and "UNSET" for NSTUNSET.
 	- Avoid fatal errors when v2 record blockettes contain invalid time stamps.
+	- Limit float point values in extra headers to single precision.
 	- Update yyjson to v0.12.0
 
 2025.227:
